--- a/4)링크와이미지넣기.html
+++ b/4)링크와이미지넣기.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>텍스트작성하기</title>
+    <title>링크와이미지넣기</title>
 </head>
 <body>
         <!-- <a> HTML에서 내부나 외부 링크를 생성-->
